Login and registration page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,11 @@
 <mat-toolbar color="primary">
-    <mat-icon>restaurant</mat-icon>
-    <span>Restaurant</span>
+    <a href="/Menu" class="logo">
+        <mat-icon>restaurant</mat-icon>
+        <span>Restaurant</span>
+    </a>
+
+    <span class="nick"></span>
+    <a href="/Login" class="user">
+        <mat-icon>account_circle</mat-icon>
+    </a>
 </mat-toolbar>
