--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,40 @@
 mat-icon {
     margin-right: 0.5rem;
 }
+
+.logo {
+    color: white;
+    text-decoration: none;
+
+    mat-icon {
+        transform: scale(1.5, 1.5);
+    }
+}
+
+.user {
+    border: none;
+    color: white;
+    background-color: rgba($color: #000000, $alpha: 0);
+    cursor: pointer;
+    position: absolute;
+    right: 2em;
+
+    mat-icon {
+        position: relative;
+        left: 50%;
+        height: 50%;
+        transform: scale(2, 2) translate(-25%, 0);
+    }
+}
+
+.nick {
+    // background-color: white;
+    width: 200px;
+    position: absolute;
+    right: 3.5em;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+
+}
