--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <span>Restaurant</span>
     </a>
 
-    <span class="nick"></span>
+    <span class="nick">{{""}}</span>
     <a href="/Login" class="user">
         <mat-icon>account_circle</mat-icon>
     </a>
