Dish component created

--- a/src/app/components/dish-li/dish-li.component.html
+++ b/src/app/components/dish-li/dish-li.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="onClick()">
     <picture>
         <!-- <source media="(min-width: 1201px)"
             srcset="https://cdn.pixabay.com/photo/2014/09/18/11/56/skyscrapers-450793_960_720.jpg"> -->
