--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -15,5 +15,5 @@
     <button type="submit" [disabled]="!loginForm.valid">
         LOG IN
     </button>
-    <a href="/Registration">Don't have an account yet? Sign Up</a>
+    <a href="/registration">Don't have an account yet? Sign Up</a>
 </form>
