--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -38,11 +38,14 @@ mat-icon {
     // background-color: white;
     width: 200px;
     position: absolute;
-    right: 4em;
+    right: 4.5em;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     text-align: right;
 
+    @media (max-width:640px) {
+        display: none;
+    }
 
 }
