--- a/src/app/components/dish-li/dish-li.component.scss
+++ b/src/app/components/dish-li/dish-li.component.scss
@@ -25,7 +25,7 @@
 
 picture {
     width: 100%;
-    height: 40%;
+    height: 160px;
 
     img {
         border-radius: 4% 4% 0 0;
@@ -40,10 +40,10 @@ picture {
 .dishInfo {
     display: flex;
     flex-direction: column;
-
     width: 94%;
-    height: 40%;
-    padding-top: 1em;
+    height: 170px;
+    max-height: 180px;
+    padding-top: 10px;
 
     :first-child {
         display: flex;
@@ -62,13 +62,10 @@ picture {
 
     .description {
         line-height: 1.2em;
-        height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
 
     }
-
-
 
     // a {
     //     background-color: rgb(230, 108, 104);
@@ -93,9 +90,10 @@ p {
 .cardFooter {
     border-top: 1px solid rgb(230, 230, 230);
     width: 100%;
-    height: 20%;
+    min-height: 40px;
     display: flex;
     padding-top: 5%;
     justify-content: space-between;
     align-content: center;
+
 }
