--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar color="primary">
-    <a href="/Menu" class="logo">
+    <a href="/menu" class="logo">
         <mat-icon>restaurant</mat-icon>
         <span>Restaurant</span>
     </a>
 
-    <span class="nick">{{""}}</span>
-    <a href="/Login" class="user">
+    <span class="nick">{{"Mateusz"}}</span>
+    <a href="/login" class="user">
         <mat-icon>account_circle</mat-icon>
     </a>
 </mat-toolbar>
