--- a/src/app/components/registration-page/registration-page.component.html
+++ b/src/app/components/registration-page/registration-page.component.html
@@ -26,7 +26,7 @@
     <button type="submit" [disabled]="!registerForm.valid">
         SIGN UP
     </button>
-    <a href="/Login">Already have an account? Log in</a>
+    <a href="/login">Already have an account? Log in</a>
     <div class="errorsContainer" *ngIf="registerForm.invalid">
         <div
             *ngIf="registerForm.controls['email'].errors && (registerForm.controls['email'].touched || registerForm.controls['email'].dirty)">
