--- a/src/app/components/dish-li/dish-li.component.html
+++ b/src/app/components/dish-li/dish-li.component.html
@@ -1,24 +1,39 @@
-<div class="card" (click)="onClick()">
-    <picture>
-        <!-- <source media="(min-width: 1201px)"
-            srcset="https://cdn.pixabay.com/photo/2014/09/18/11/56/skyscrapers-450793_960_720.jpg"> -->
-        <img src='{{dish.imgs.length>0?dish.imgs[0]:"https://cdn.pixabay.com/photo/2017/02/15/10/39/salad-2068220_960_720.jpg"}}'
-            alt="dishImg">
-    </picture>
-    <div class="dishInfo">
-        <div>
-            <h1>{{dish.name}}</h1>
-            <h1>{{dish.price}}</h1>
-        </div>
+<div class="card">
+    <div class="card" (click)="openDetailsView()" [ngClass]="order>0?'active':''" *ngIf="dish">
+        <picture>
+            <img src='{{dish.imgs.length>0?dish.imgs[0]:"https://cdn.pixabay.com/photo/2017/02/15/10/39/salad-2068220_960_720.jpg"}}'
+                alt="dishImg">
+        </picture>
+        <article>
+            <div>
+                <h1>{{dish.name|uppercase}}</h1>
+                <h1>{{dish.price | ownCurrencyPipe}}</h1>
+            </div>
 
-        <h2>{{dish.category}}</h2>
-        <p class="description">
-            {{dish.description}}
-        </p>
-    </div>
-    <div class="cardFooter">
-        <div>
+            <h2>{{dish.category|uppercase}}</h2>
+            <p class="description">
+                {{dish.description}}
+            </p>
+        </article>
+        <footer (click)="$event.stopPropagation()">
+            <div class="orderControls">
+                <button (click)="incrementOrder($event)" [disabled]="order==dish.maxQuantity">
+                    <mat-icon class="addOrder">add</mat-icon>
+                </button>
+                <p>{{order}}</p>
+                <button (click)="decrementOrder($event)" [disabled]="order==0">
+                    <mat-icon class="removeOrder">remove</mat-icon>
+                </button>
 
-        </div>
+            </div>
+            <div class="starsContainer">
+                <div *ngFor="let star of [1,2,3,4,5]" class="starBorder">
+                    <div class="star" [ngStyle]="{'backgroundColor':star<=stars?'gold':'white'}">
+                    </div>
+                </div>
+                <p>{{stars}}</p>
+            </div>
+        </footer>
     </div>
+    <mat-spinner *ngIf="!dish"></mat-spinner>
 </div>
