--- a/src/app/components/dish-li/dish-li.component.scss
+++ b/src/app/components/dish-li/dish-li.component.scss
@@ -1,3 +1,6 @@
+@use "src/app/styles/stars";
+@use "src/app/styles/orderControls";
+
 .card {
     display: flex;
     flex-direction: column;
@@ -6,9 +9,13 @@
     height: 100%;
     width: 100%;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 
+    &.active {
+        box-shadow: 0 5px 15px rgba(0, 213, 255, 0.5);
+    }
 
 
     &:hover {
@@ -37,17 +44,20 @@ picture {
     }
 }
 
-.dishInfo {
+article {
     display: flex;
     flex-direction: column;
     width: 94%;
-    height: 170px;
-    max-height: 180px;
+    min-height: 170px;
     padding-top: 10px;
 
     :first-child {
         display: flex;
         justify-content: space-between;
+
+        &>:last-child {
+            font-weight: 500;
+        }
     }
 
     h2 {
@@ -67,17 +77,6 @@ picture {
 
     }
 
-    // a {
-    //     background-color: rgb(230, 108, 104);
-    //     text-decoration: none;
-    //     color: whitesmoke;
-    //     padding: 3%;
-    //     text-align: center;
-    //     vertical-align: middle;
-    // }
-
-
-
 }
 
 p {
@@ -87,13 +86,14 @@ p {
     z-index: 2;
 }
 
-.cardFooter {
+footer {
+    cursor: default;
     border-top: 1px solid rgb(230, 230, 230);
     width: 100%;
-    min-height: 40px;
+    height: 100%;
+    overflow: hidden;
     display: flex;
-    padding-top: 5%;
-    justify-content: space-between;
-    align-content: center;
+    align-items: center;
+    justify-content: space-around;
 
 }
