--- a/src/app/components/dish/dish.component.scss
+++ b/src/app/components/dish/dish.component.scss
@@ -1,88 +1,201 @@
+@use "src/app/styles/stars";
+@use "src/app/styles/dropdown";
+@use "src/app/styles/orderControls";
+
 .container {
-    background-color: red;
-    max-width: 840px;
+    max-width: 1156px;
     width: 100%;
-    min-width: none;
     left: 50%;
     position: relative;
     transform: translate(-50%, 0);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+
+
+}
+
+.starsContainer {
+    width: fit-content;
+    margin-left: auto;
 }
 
 picture {
-    width: 100%;
-    height: 365px;
+    width: 98%;
+    height: 480px;
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    position: relative;
+
+    @media (max-width:480px) {
+        height: 365px;
+    }
 
     img {
         width: 100%;
         position: absolute;
-        height: 365px;
+        height: 100%;
         object-fit: cover;
-        // display: none;
+        border-radius: 25px;
     }
 
-    mat-icon {
-        color: white;
-        z-index: 2;
-        transform: scale(2, 2);
+    .controls {
+        opacity: 0.3;
+        width: 100%;
+        height: 100%;
         position: absolute;
-        border-radius: 50%;
-        background-color: rgba(50, 50, 50, 0.5);
-        transition: all 0.15s ease-in-out;
-        font-weight: bolder;
+        transition: 0.2s ease-in-out;
 
         &:hover {
-            background-color: rgba(50, 50, 50, 0.7);
-            cursor: pointer;
+            opacity: 1;
         }
 
-        &:first-of-type {
-            left: 20%;
-            bottom: 10%;
-        }
-
-        &:last-of-type {
-            right: 20%;
-            bottom: 10%;
-        }
-
-    }
-
-    .dots {
-        width: 50%;
-        position: absolute;
-        height: 48px;
-        z-index: 2;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%, 25%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-        div {
-            margin-left: 0.5em;
-            margin-right: 0.5em;
-            width: 20px;
-            height: 20px;
+        mat-icon {
+            color: white;
+            z-index: 2;
+            transform: scale(2, 2);
+            position: absolute;
             border-radius: 50%;
-            background-color: rgba(50, 50, 50, 0.7);
-            ;
+            background-color: rgba(50, 50, 50, 0.5);
+            transition: all 0.15s ease-in-out;
+            font-weight: bolder;
+            border: 2px solid white;
 
             &:hover {
-                background-color: rgba(200, 200, 200, 0.7);
+                background-color: rgba(50, 50, 50, 0.7);
                 cursor: pointer;
             }
 
-            .active {
-                background-color: rgba(200, 200, 200, 0.8);
+            &:first-of-type {
+                left: 20%;
+                bottom: 10%;
             }
+
+            &:last-of-type {
+                right: 20%;
+                bottom: 10%;
+            }
+
+
         }
+
+        .dots {
+            width: 50%;
+            position: absolute;
+            height: 48px;
+            z-index: 2;
+            bottom: 10%;
+            left: 50%;
+            transform: translate(-50%, 25%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+
+            div {
+                margin-left: 0.5em;
+                margin-right: 0.5em;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: rgba(50, 50, 50, 0.7);
+                border: 2px solid white;
+
+                &:hover {
+                    background-color: rgba(200, 200, 200, 0.7);
+                    cursor: pointer;
+                }
+
+                &.active {
+                    background-color: rgba(200, 200, 200, 0.8);
+                }
+            }
+
+        }
+    }
+
+
+}
+
+
+article {
+    display: flex;
+    flex-direction: column;
+    width: 94%;
+    max-width: 960px;
+    padding-top: 10px;
+
+    &>* {
+        padding-top: 20px;
+    }
+
+
+    &>div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &>:last-child {
+            font-weight: 500;
+        }
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    h2 {
+        color: rgb(230, 108, 104);
+        margin: 0;
+    }
+
+
+
+
+    .description {
+        line-height: 1.2em;
+        padding: 20px 20px;
+        margin: 10px 0;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 15px;
 
     }
 
+    .orderControls {
+        transform: scale(1.5, 1.5);
+    }
+}
+
+article:last-of-type {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.review {
+    width: 95%;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+
+    & .starsContainer {
+        transform: scale(0.7, 0.7) translate(-20%, -40%);
+    }
+
+
+
+    & .header {
+        width: 100%;
+        padding: 5px 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
