Authorization almost done

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <span>Restaurant</span>
     </a>
 
-    <span class="nick">{{"Mateusz"}}</span>
+    <!-- <span class="nick" *ngIf="authService.userData as user">{{user.name}}</span> -->
     <a href="/login" class="user">
         <mat-icon>account_circle</mat-icon>
     </a>
